apollo-federation/tests/composition/snapshots/main__composition__composite_schemas__composition_output__nested_public_lookup.snap
---
source: apollo-federation/tests/composition/composite_schemas.rs
expression: composition_summary(&supergraph)
---
# Supergraph

schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/join/v0.6", for: EXECUTION) {
  query: Query
}

type Lookups @join__type(graph: A) {
  productById(id: ID!): Product @join__field(graph: A, lookup: true)
}

type Product @join__type(graph: A, key: "id") {
  id: ID!
}

type Query @join__type(graph: A) {
  lookups: Lookups!
}

enum join__Graph {
  A @join__graph(name: "a", url: "http://a")
}

# API schema

type Lookups {
  productById(id: ID!): Product
}

type Product {
  id: ID!
}

type Query {
  lookups: Lookups!
}

# Extracted subgraph "a"

schema @link(url: "https://specs.apollo.dev/link/v1.0") @link(url: "https://specs.apollo.dev/federation/v3.0", import: ["@key", "@requires", "@provides", "@external", "@tag", "@extends", "@shareable", "@inaccessible", "@override", "@composeDirective", "@interfaceObject"]) {
  query: Query
}

type Lookups {
  productById(id: ID!): Product @federation__lookup
}

type Product @key(fields: "id") {
  id: ID!
}

type Query {
  lookups: Lookups!
  _service: _Service!
}
